adds notesButton back to classic player

--- a/classic/player.html
+++ b/classic/player.html
@@ -49,6 +49,7 @@
 <div id="player" style="height:0px;width:0px;overflow:hidden;">
     <div id="toolbar" style= "height:50px;bottom:0px;width:100%;z-index:50;overflow: hidden;">
         <div id="ddiv" style="height:50px;width:100%;opacity:1;">
+            <button class="boxShadow" id="notesButton" onClick="sHp()" style="display:none;font-weight:bold;left:7px;position:absolute;top:12px;width:60px">Menu</button>
             <div id="logo" style="width:20%;height:40px;left:75px;top:4px;overflow:hidden"></div>
             <div id="time"><span id="times">00:00</span></div>
             <div id="progressContainer"><div id="progress"><div id="Bar"></div></div></div>
